<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="azimuth"
      type="Double" />
    <variable
      name="pitch"
      type="Double" />
    <variable
      name="roll"
      type="Double" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
      android:id="@+id/text_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/text_title"
      app:layout_constraintBottom_toBottomOf="@+id/button_get_orientation"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/button_get_orientation"
      />

    <Button
      android:id="@+id/button_get_orientation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/button_get_orientation"
      app:layout_constraintEnd_toStartOf="@+id/checkbox_realtime"
      app:layout_constraintStart_toEndOf="@+id/text_title"
      app:layout_constraintTop_toTopOf="parent"
      />

    <CheckBox
      android:id="@+id/checkbox_realtime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/realtime"
      app:layout_constraintBottom_toBottomOf="@+id/button_get_orientation"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/button_get_orientation"
      />

    <TextView
      android:id="@+id/text_title_z"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="40dp"
      android:text="@string/text_title_z"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_title"
      />

    <TextView
      android:id="@+id/text_view_azimuth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:text="@{Double.toString(azimuth)}"
      app:layout_constraintBottom_toBottomOf="@+id/text_title_z"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/text_title_z"
      app:layout_constraintTop_toTopOf="@+id/text_title_z"
      />
    <TextView
      android:id="@+id/text_title_x"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="20dp"
      android:text="@string/text_title_x"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_title_z"
      />
    <TextView
      android:id="@+id/text_view_pitch"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:text="@{Double.toString(pitch)}"
      app:layout_constraintBottom_toBottomOf="@+id/text_title_x"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/text_title_x"
      app:layout_constraintTop_toTopOf="@+id/text_title_x"
      />
    <TextView
      android:id="@+id/text_title_y"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="20dp"
      android:text="@string/text_title_y"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_title_x"
      />
    <TextView
      android:id="@+id/text_view_roll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:text="@{Double.toString(roll)}"
      app:layout_constraintBottom_toBottomOf="@+id/text_title_y"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/text_title_y"
      app:layout_constraintTop_toTopOf="@+id/text_title_y"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
