<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  >
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
      android:id="@+id/label_gps"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_gps"
      android:textSize="18sp"
      />
    <TextView
      android:id="@+id/label_gps_latitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_latitude"
      app:layout_constraintTop_toBottomOf="@+id/label_gps"
      />
    <TextView
      android:id="@+id/label_gps_longitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_longitude"
      app:layout_constraintTop_toBottomOf="@+id/label_gps_latitude"
      />
    <TextView
      android:id="@+id/label_gps_accuracy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_accuracy"
      app:layout_constraintTop_toBottomOf="@+id/label_gps_longitude"
      />
    <TextView
      android:id="@+id/label_gps_altitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_altitude"
      app:layout_constraintTop_toBottomOf="@+id/label_gps_accuracy"
      />
    <TextView
      android:id="@+id/text_gps_latitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_gps_latitude"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_gps_latitude"
      app:layout_constraintTop_toTopOf="@+id/label_gps_latitude"
      />
    <TextView
      android:id="@+id/text_gps_longitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_gps_longitude"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_gps_longitude"
      app:layout_constraintTop_toTopOf="@+id/label_gps_longitude"
      />
    <TextView
      android:id="@+id/text_gps_accuracy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_gps_accuracy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_gps_accuracy"
      app:layout_constraintTop_toTopOf="@+id/label_gps_accuracy"
      />
    <TextView
      android:id="@+id/text_gps_altitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_gps_altitude"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_gps_altitude"
      app:layout_constraintTop_toTopOf="@+id/label_gps_altitude"
      />
    <TextView
      android:id="@+id/label_wifi"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_wifi"
      android:textSize="18sp"
      app:layout_constraintTop_toBottomOf="@id/label_gps_altitude"
      />
    <TextView
      android:id="@+id/label_wifi_latitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_latitude"
      app:layout_constraintTop_toBottomOf="@id/label_wifi"
      />
    <TextView
      android:id="@+id/label_wifi_longitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_longitude"
      app:layout_constraintTop_toBottomOf="@id/label_wifi_latitude"
      />
    <TextView
      android:id="@+id/label_wifi_accuracy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_accuracy"
      app:layout_constraintTop_toBottomOf="@id/label_wifi_longitude"
      />
    <TextView
      android:id="@+id/label_wifi_altitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_altitude"
      app:layout_constraintTop_toBottomOf="@id/label_wifi_accuracy"
      />
    <TextView
      android:id="@+id/text_wifi_latitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_wifi_latitude"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_wifi_latitude"
      app:layout_constraintTop_toTopOf="@+id/label_wifi_latitude"
      />
    <TextView
      android:id="@+id/text_wifi_longitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_wifi_longitude"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_wifi_longitude"
      app:layout_constraintTop_toTopOf="@+id/label_wifi_longitude"
      />
    <TextView
      android:id="@+id/text_wifi_accuracy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_wifi_accuracy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_wifi_accuracy"
      app:layout_constraintTop_toTopOf="@+id/label_wifi_accuracy"
      />
    <TextView
      android:id="@+id/text_wifi_altitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/label_wifi_altitude"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/label_wifi_altitude"
      app:layout_constraintTop_toTopOf="@+id/label_wifi_altitude"
      />
    <Button
      android:id="@+id/button_wifi"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_wifi"
      app:layout_constraintTop_toBottomOf="@id/label_wifi_altitude"
      />
    <Button
      android:id="@+id/button_gps"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_gps"
      app:layout_constraintTop_toBottomOf="@id/label_wifi_altitude"
      app:layout_constraintStart_toEndOf="@id/button_wifi"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>